fixing vertical alignment with donate button in nav

--- a/remedy/static/css/remedy.less
+++ b/remedy/static/css/remedy.less
@@ -231,11 +231,15 @@ div.row.bar {
 	}
 }
 
-.donate-button {
-	background-color: @rad-pink; 
-	border-radius: 6px; 
-	margin: 3px; 
-	font-weight: bold; 
+div.row.bar .nav li.donate-button {
+	background-color: @rad-pink;
+	border-radius: 6px;
+	margin: 3px 0px 2px 2px;
+	font-weight: bold;
+
+	> a {
+		padding: 7px 15px;
+	}
 }
 
 // Style the jumbotron on our front page
